@@ -301,10 +301,14 @@ class TestTkrzw(unittest.TestCase):
       self.assertEqual(Status.SUCCESS, export_dbm.CompareExchange("1", "100", "101"))
       value = export_dbm.Increment("10000", 2)
       self.assertEqual(value, 10004)
-      self.assertEqual(Status.DUPLICATION_ERROR, export_dbm.CompareExchange("1", "100", "101"))
+      self.assertEqual(Status.INFEASIBLE_ERROR, export_dbm.CompareExchange("1", "100", "101"))
       self.assertEqual(Status.SUCCESS, export_dbm.CompareExchange("1", "101", None))
       value = export_dbm.Get("1", status)
       self.assertEqual(Status.NOT_FOUND_ERROR, status)
+      self.assertEqual(Status.SUCCESS, export_dbm.CompareExchange("1", None, "zzz"))
+      self.assertEqual(Status.INFEASIBLE_ERROR, export_dbm.CompareExchange("1", None, "yyy"))
+      self.assertEqual("zzz", export_dbm.GetStr("1", status))
+      self.assertEqual(Status.SUCCESS, export_dbm.CompareExchange("1", "zzz", None))
       it = export_dbm.MakeIterator()
       self.assertEqual(Status.SUCCESS, it.First())
       self.assertEqual(Status.SUCCESS, it.Set("foobar"))
