@@ -3,6 +3,7 @@
 	- Release: 0.1.9
 
 	- Add RemoveMulti method.
+	- CompareExchange supports expectation for missing records.
 	- Compatibility to the C++ library: Tkrzw 0.9.21
 
 2021-05-16  Mikio Hirabayashi  <hirarin@gmail.com>
